--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "apollo-server": "^2.0.8",
     "apollo-server-express": "^2.0.6",
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
@@ -26,7 +28,10 @@
     "babel-preset-stage-2": "^6.24.1"
   },
   "scripts": {
-    "start": "nodemon server.js --exec babel-node",
-    "seeder": "babel-node ./seed/institution-seeder.js"
+    "dev": "nodemon ./src/server.js --exec babel-node",
+    "seeder": "babel-node ./src/seed/institution-seeder.js",
+    "clean": "rm -rf dist && mkdir dist",
+    "build": "babel src -d dist --copy-files",
+    "start": "node ./dist/server.js"
   }
 }
